<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/lbl_language"
        android:textColor="@color/lbl_language"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="353dp"
        android:layout_height="310dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        app:columnCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLanguage"
        app:rowCount="2">

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="@dimen/button_width_size"
            android:layout_height="@dimen/button_height_size"
            android:layout_marginLeft="@dimen/margin_button_left"
            android:layout_marginRight="@dimen/margin_button_right"
            android:backgroundTint="@color/buttons_languages_background"
            android:text="@string/button_english"
            android:textSize="@dimen/buttons_textsize"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnSpanish"
            android:layout_width="@dimen/button_width_size"
            android:layout_height="@dimen/button_height_size"
            android:backgroundTint="@color/buttons_languages_background"
            android:text="@string/button_spanish"
            android:textSize="@dimen/buttons_textsize"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnPortuguese"
            android:layout_width="@dimen/button_width_size"
            android:layout_height="@dimen/button_height_size"
            android:backgroundTint="@color/buttons_languages_background"
            android:text="@string/button_portuguese"
            android:textSize="@dimen/buttons_textsize"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnFrench"
            android:layout_width="@dimen/button_width_size"
            android:layout_height="@dimen/button_height_size"
            android:layout_marginLeft="@dimen/margin_button_left"
            android:layout_marginRight="@dimen/margin_button_right"
            android:backgroundTint="@color/buttons_languages_background"
            android:text="@string/button_french"
            android:textSize="@dimen/buttons_textsize"
            app:layout_column="0"
            app:layout_row="1" />
    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="@dimen/buttonStart_width_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/buttons_languages_background"
        android:text="@string/button_start"
        android:textAlignment="center"
        android:textSize="20sp"
        app:icon="@drawable/baseline_engineering_24"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>